--- a/app/views/widgets/hero/_business_hero.html
+++ b/app/views/widgets/hero/_business_hero.html
@@ -1,5 +1,20 @@
-<div class="side-panel-hero">              
-  <div class="background-image" style="background-image: url('../test-section/_files/ross-test/beckman.jpg');"></div>
+<div class="side-panel-hero">
+  <div class="owl-carousel owl-theme">
+    <div class="background-image" style="background-image: url('../test-section/_files/ross-test/beckman.jpg');">
+      <article class="theme-bg-color-alpha">
+        <img src="../test-section/_files/ross-test/beckman.jpg"/>
+        <div class="content">
+          <span class="category">#Rank and Recognition</span>
+          <h2 class="title">Bloomberg Businessweek Ranks the Argyros School in the Top 100</h2>
+          <h3 class="subtitle">by Bloomberg Businessweek</h3>
+          <p class="body">
+            <span>Nec legere facete adipiscing eu, vim ad verear aperiam inimicus, ea ferri civibus sadipscing sed. Ad vis nostrud bonorum efficiantur. No vel illum prompta deleniti. Et offendit ocu</span>
+          </p>
+          <a href="http://www.google.com">Learn More</a>
+        </div>
+      </article>
+    </div>
+  </div>
         
   <div class="hero-content">
     <section>
@@ -39,18 +54,5 @@
         <a class="theme-bg-color" href="graduate/index.aspx">Graduate Program</a>
       </nav>
     </section>
-
-    <article class="theme-bg-color-alpha">
-      <img src="../test-section/_files/ross-test/beckman.jpg"/>
-      <div class="content">
-        <span class="category">#Rank and Recognition</span>
-        <h2 class="title">Bloomberg Businessweek Ranks the Argyros School in the Top 100</h2>
-        <h3 class="subtitle">by Bloomberg Businessweek</h3>
-        <p class="body">
-          <span>Nec legere facete adipiscing eu, vim ad verear aperiam inimicus, ea ferri civibus sadipscing sed. Ad vis nostrud bonorum efficiantur. No vel illum prompta deleniti. Et offendit ocu</span>
-        </p>
-        <a href="http://www.google.com">Learn More</a>
-      </div>
-    </article>
   </div>
 </div>
