--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -1,17 +1,72 @@
 <div class="side-panel-hero">
-  <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
-    <article class="theme-bg-color-alpha">
-      <img src="http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg">
-      <div class="content">
-        <span>Beyond Dodge</span>
-        <h2>New Orleans Becoming Hollywood South</h2>
-        <h3>Alumni Discuss the film industry in New Orleans</h3>
-        <p>
-          What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...<a href="#">Read more on dodge</a>
-        </p>
-      </div>
-    </article>
-  </div>
+  <section class="cd-hero">
+    <ul class="cd-hero-slider autoplay">
+      <li class="selected">
+        <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
+        <article class="theme-bg-color-alpha">
+          <img src="http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg">
+          <div class="content">
+            <span class="category">Beyond Dodge</span>
+            <h2 class="title">New Orleans Becoming Hollywood South</h2>
+            <h3 class="subtitle">Alumni Discuss the film industry in New Orleans</h3>
+            <p class="body">
+              What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...&nbsp;&nbsp;<a href="#">Read more on dodge</a>
+            </p>
+          </div>
+        </article>
+        </div>
+      </li>
+      
+      <li>
+        <div class="background-video-wrapper">
+          <article class="theme-bg-color-alpha">
+            <video controls poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
+              <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
+            </video>
+            <div class="content">
+              <span class="category">Sports Broadcasting</span>
+              <h2 class="title">Students Cover Chapman's Homecoming Football Game</h2>
+              <h3 class="subtitle">Equitment and crew all from Chapman's own Dodge College</h3>
+              <p class="body">
+                What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...&nbsp;&nbsp;<a href="#">Read more on dodge</a>
+              </p>
+            </div>
+          </article>
+          <video id="background-video" class="background-video" autoplay loop poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
+            <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
+          </video>
+        </div> 
+      </li>
+  
+      <li>
+        <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
+          <article class="theme-bg-color-alpha">
+            <img src="http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg">
+            <div class="content">
+              <span class="category">Hello there</span>
+              <h2 class="title">This is my test panel, hope it works</h2>
+              <h3 class="subtitle">Alumni Discuss the film industry in New Orleans</h3>
+              <p class="body">
+                What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...&nbsp;&nbsp;<a href="#">Read more on dodge</a>
+              </p>
+            </div>
+          </article>
+        </div>
+      </li>
+    </ul>
+
+    <div class="cd-slider-nav">
+      <nav>
+        <span class="cd-marker item-1"></span>
+        
+        <ul>
+          <li class="selected"><a href="#0">One</a></li>
+          <li><a href="#0">Two</a></li>
+          <li><a href="#0">Three</a></li>
+        </ul>
+      </nav> 
+    </div>
+  </section>
   
   <div class="hero-content">
     <section>
