--- a/app/views/widgets/hero/_side_panel_video.html
+++ b/app/views/widgets/hero/_side_panel_video.html
@@ -1,22 +1,27 @@
 <div class="side-panel-hero">
-
-  <div class="background-video-wrapper">
-    <article class="theme-bg-color-alpha">
-      <video controls poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
-        <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
-      </video>
-      <div class="content">
-        <span class="category">Sports Broadcasting</span>
-        <h2 class="title">Students Cover Chapman's Homecoming Football Game</h2>
-        <h3 class="subtitle">Equitment and crew all from Chapman's own Dodge College</h3>
-        <p class="body">
-          What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...<a href="#">Read more on dodge</a>
-        </p>
-      </div>
-    </article>
-    <video id="background-video" class="background-video" autoplay loop poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
-      <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
-    </video>
+  <div class="cd-hero">
+    <ul class="cd-hero-slider autoplay">
+      <li class="selected">
+        <div class="background-video-wrapper">
+          <article class="theme-bg-color-alpha">
+            <video controls poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
+              <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
+            </video>
+            <div class="content">
+              <span class="category">Sports Broadcasting</span>
+              <h2 class="title">Students Cover Chapman's Homecoming Football Game</h2>
+              <h3 class="subtitle">Equitment and crew all from Chapman's own Dodge College</h3>
+              <p class="body">
+                What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...<a href="#">Read more on dodge</a>
+              </p>
+            </div>
+          </article>
+          <video id="background-video" class="background-video" autoplay loop poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
+            <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
+          </video>
+        </div> 
+      </li>
+    </ul>
   </div>
   
   
