--- a/app/views/widgets/single_column/_contact_footer.html
+++ b/app/views/widgets/single_column/_contact_footer.html
@@ -5,10 +5,8 @@
 		</div>
 		<div class="footer-section contact-1">
 			<address class="mailing">
-				<h3 class="footer-heading address attn">Front Office</h3>
-				<p class="address line-1">Marion Knott Studios, Room 309</p>
-				<p class="address line-2">One University Drive</p>
-				<p class="address line-1">Orange, CA 92866</p>
+				<h3 class="footer-heading address name">Front Office</h3>
+				<p class="address">Marion Knott Studios, Room 309<br>One University Drive<br>Orange, CA 92866</p>
 			</address>
 		</div>
 		<div class="footer-section contact-2">
@@ -20,9 +18,9 @@
 		<div class="footer-section social-media">
 			<h3 class="footer-heading">Connect with Us</h3>
 			<ul class="social-media-list">
-				<li><a class="social-link instagram" href="http://www.instagram.com/chapmanu"></a></li>
-				<li><a class="social-link facebook" href="http://www.facebook.com/ChapmanUniversity"></a></li>
-				<li><a class="social-link twitter" href="http://twitter.com/#!/chapmanu"></a></li>
+				<li><a class="social-link instagram" href="http://www.instagram.com/chapmanu"style="background-image: url(<%= image_url 'instagram.svg' %>);"></a></li>
+				<li><a class="social-link facebook" href="http://www.facebook.com/ChapmanUniversity" style="background-image: url(<%= image_url 'facebook.svg' %>);"></a></li>
+				<li><a class="social-link twitter" href="http://twitter.com/#!/chapmanu" style="background-image: url(<%= image_url 'twitter.svg' %>);"></a></li>
 			</ul>
 		</div>
 	</div>
