--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -9,10 +9,14 @@
     width: 100%;
   }
 
-  .background-image, .background-video-wrapper {
-    padding: $one-column-widget-spacing;
-    @include media($large-screen) {
+  .cd-hero, .background-image, .background-video-wrapper {
+    padding-bottom: $one-column-widget-spacing;
+
+    @include media($medium-screen) {
       padding: 0;
+    }
+
+    @include media($large-screen) {
       overflow: hidden;
       display: block;
       position: absolute;
@@ -21,15 +25,63 @@
     }
   }
 
-  .cd-hero {
-    display: none;
-    @include media($large-screen) {
+  .cd-hero-slider {
+    height: 95%;
+    list-style-type: none;
+
+    li {
       padding: 0;
-      overflow: hidden;
-      display: block;
-      position: absolute;
-      top: 0; right: 0; left: 0; bottom: 0;
-      height: 750px; width: 100%;
+      max-width: 100%;
+      margin-bottom: 0;
+      background-color: #ECEBE5;
+      @include media($medium-screen) {
+        padding: $one-column-widget-spacing;
+      }
+    }
+  }
+
+  .cd-slider-nav {
+    height: 17%;
+    background-color: transparent;
+    text-align: right;
+
+    .cd-marker { background-color: transparent; }
+
+    a {
+      box-shadow: inset 0 2px 0 currentColor;
+      padding-top: 10px;
+      font-size: 10px;
+      padding: 0 5px;
+      font-weight: normal;
+      text-transform: uppercase;
+      max-width: 100px;
+      text-align: left;
+      &:hover { background-color: transparent; }
+    }
+
+    li {
+      width: inherit;
+      &.selected a { box-shadow: inset 0 2px 0 #006181; }
+    }
+
+    @include media($medium-screen) {
+      height: 6%;
+      padding-right: 64px;
+      a {
+        font-size: 12px;
+        padding: 0 10px;
+        max-width: none;
+        text-align: right;
+      }
+    }
+
+    @include media($large-screen){
+      height: 4%;
+      padding-right: 0;
+      a {
+        font-size: 14px;
+        padding: 0 15px;
+      }
     }
   }
 
