--- a/app/views/widgets/single_column/_chapman_social_feed.html
+++ b/app/views/widgets/single_column/_chapman_social_feed.html
@@ -1,5 +1,12 @@
-<div class="chapman-social-feed-widget">
+<div class="chapman-social-feed-widget chapman-social-feed-widget__has-social-icons">
   <h2 class="chapman-social-feed-title">Chapman University Social Media</h2>
+  <div class="chapman-social-feed-icons">
+  	<ul class="social-icon-list">
+  	  <li><a class="social-link instagram" href="http://www.instagram.com/chapmanu"style="background-image: url(<%= image_url 'instagram.svg' %>);"></a></li>
+  	  <li><a class="social-link facebook" href="http://www.facebook.com/ChapmanUniversity" style="background-image: url(<%= image_url 'facebook.svg' %>);"></a></li>
+  	  <li><a class="social-link twitter" href="http://twitter.com/#!/chapmanu" style="background-image: url(<%= image_url 'twitter.svg' %>);"></a></li>
+  	</ul>
+  </div>
   <div class="chapman-social-feed"></div>
   <script type="text/javascript">
     jQuery('.chapman-social-feed').chapmanSocialFeed({url: 'https://social.chapman.edu', per: 9, max_columns: 4});
