--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -1,4 +1,37 @@
 <div class="side-panel-hero">
+
+  <div class="hero-content">
+    <section class="hero-content-panel">
+      <h1>Dodge College of Film and Media Arts</h1>
+      <h2>Preparing students for a creative life in fiml and media arts.</h2>
+      <p>
+        Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
+      </p>
+
+      <nav id="program-select-links" class="program-select">
+        <input type="hidden" href="#"/>
+        <input type="hidden" href="http://jameskerr.info"/>
+        <input type="hidden" href="https://github.com"/>
+        <input type="hidden" href="http://jameskerr.info"/>
+        <input type="hidden" href="http://jameskerr.info"/>
+
+        <span class="select-arrow theme-border-color"></span>
+        <select class="theme-border-color">
+          <option>Programs and Majors</option>
+          <option>Film Production</option>
+          <option>Editing</option>
+          <option>Screenwriting</option>
+          <option>Publications & Broadcasting</option>
+        </select>
+      </nav>
+
+      <nav class="calls-to-action">
+        <a href="#" class="theme-bg-color">Visit Dodge</a>
+        <a href="#" class="theme-bg-color">Admission Information</a>
+      </nav>
+    </section>
+  </div>
+
   <div class="cd-hero">
     <ul class="cd-hero-slider autoplay">
       <li class="selected">
@@ -65,37 +98,5 @@
         </ul>
       </nav> 
     </div>
-  </div>
-  
-  <div class="hero-content">
-    <section>
-      <h1>Dodge College of Film and Media Arts</h1>
-      <h2>Preparing students for a creative life in fiml and media arts.</h2>
-      <p>
-        Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
-      </p>
-
-      <nav id="program-select-links" class="program-select">
-        <input type="hidden" href="#"/>
-        <input type="hidden" href="http://jameskerr.info"/>
-        <input type="hidden" href="https://github.com"/>
-        <input type="hidden" href="http://jameskerr.info"/>
-        <input type="hidden" href="http://jameskerr.info"/>
-
-        <span class="select-arrow theme-border-color"></span>
-        <select class="theme-border-color">
-          <option>Programs and Majors</option>
-          <option>Film Production</option>
-          <option>Editing</option>
-          <option>Screenwriting</option>
-          <option>Publications & Broadcasting</option>
-        </select>
-      </nav>
-
-      <nav class="calls-to-action">
-        <a href="#" class="theme-bg-color">Visit Dodge</a>
-        <a href="#" class="theme-bg-color">Admission Information</a>
-      </nav>
-    </section>
   </div>
 </div>
