added medium gray background color class for messaging widget and changed classes from specifying text color to specifying background color

--- a/app/assets/stylesheets/widgets/single_column/cta_footer.scss
+++ b/app/assets/stylesheets/widgets/single_column/cta_footer.scss
@@ -1,6 +1,6 @@
 .cta-footer-widget {
 	padding: 24px 0;
-	background-color: #D8D8D8;
+	background-color: $bg-silver-gray;
 
 	.outer-container {
 		@include outer-container();
