--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -76,7 +76,8 @@ $color-row-border:   #CCCCCC;
 
 // Background colors
 $bg-light-gray:      #ecebe5;
-$bg-silver-gray:     #e5e5e5;
+$bg-platinum-gray:   #e5e5e5;
+$bg-silver-gray:     #cfcfcf;
 $bg-off-white:       #f2f2f0;
 $bg-red:             #a82439;
 
