--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -161,9 +161,14 @@
 	}
 }
 
-/* Light Text Variation */
-.messaging-widget__text-light {
-	background-color: #353430;
+/* Medium bg Variation */
+.messaging-widget__medium-bg {
+	background-color: $bg-silver-gray;
+}
+
+/* Dark bg Variation */
+.messaging-widget__dark-bg {
+	background-color: $color-dark-gray;
 	.title, .category, .body { color: white; }
 }
 
