--- a/app/views/widgets/single_column/_messaging_1_column.html
+++ b/app/views/widgets/single_column/_messaging_1_column.html
@@ -1,4 +1,4 @@
-<div class="messaging-widget messaging-widget__1-column">
+<div class="messaging-widget messaging-widget__1-column messaging-widget__medium-bg">
   <div class="outer-container">
     <div class="text-column">
       <div class="section-message">
