--- a/app/assets/stylesheets/widgets/sponsor-logo-rotator.scss
+++ b/app/assets/stylesheets/widgets/sponsor-logo-rotator.scss
@@ -1,11 +1,13 @@
 #small-sponsor {
   position: relative;
   padding: 13px 17px 6px;
-  .header {
-    font-family: Arial, sans-serif;
-    color: #a4896a;
+  img {
+  	max-width:144px; padding-left:25px
+  }
+  h2.header {
+    color:#353430
     text-transform: uppercase;
-    font-size: 1.3em;
+    font-size:1.1em;
     font-weight: bold;
     width: 100%;
     text-align: center;
@@ -26,9 +28,9 @@
     }
     .jcarousel-prev, .jcarousel-next {
       position: absolute;
-      background-color: $cu-light-grey;
+      background-color: #e2e1dc;
       color: $cu-red;
-      width: 24px;
+      width: 16px;
       height: 26px;
       font-size: 1.5em;
       text-align: center;
