fix typo on #small-sponsor css
missing semicolon

--- a/app/assets/stylesheets/widgets/sponsor-logo-rotator.scss
+++ b/app/assets/stylesheets/widgets/sponsor-logo-rotator.scss
@@ -2,7 +2,8 @@
   position: relative;
   padding: 13px 17px 6px;
   img {
-  	max-width:144px; padding-left:25px
+  	max-width:144px; 
+	padding-left:25px;
   }
   h2.header {
     color:#353430
