--- a/app/assets/stylesheets/widgets/sponsor-logo-rotator.scss
+++ b/app/assets/stylesheets/widgets/sponsor-logo-rotator.scss
@@ -6,7 +6,7 @@
 	padding-left:25px;
   }
   h2.header {
-    color:#353430
+    color:#353430;
     text-transform: uppercase;
     font-size:1.1em;
     font-weight: bold;
