--- a/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
+++ b/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
@@ -2,8 +2,7 @@
   margin: 1em 0;
   position: relative;
   .header {
-    font-family: Arial, sans-serif;
-    color: #a4896a;
+    color: #353430;
     text-transform: uppercase;
     font-size: 1.3em;
     font-weight: bold;
