--- a/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
+++ b/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
@@ -1,12 +1,13 @@
 #big-sponsor {
   margin: 1em 0;
   position: relative;
-  .header {
+  h2.header {
     color: #353430;
     text-transform: uppercase;
     font-size: 1.3em;
     font-weight: bold;
     display: inline-block;
+	margin-bottom: 2px;
   }
   .jcarousel-clip {
     overflow: hidden;
