--- a/app/assets/stylesheets/layout_old/form.scss
+++ b/app/assets/stylesheets/layout_old/form.scss
@@ -57,7 +57,7 @@
 }
 
 /************ these responsiveForm used in surrounding DIV for all full page forms ************/
-/* moved these next 3 from components/forms.scss and associate display:block only with .responsiveForm not global:
+// moved these next 3 from components/forms.scss and associate display:block only with .responsiveForm not global: 
 // Allow the height of file controls to match text inputs
 .responsiveForm input[type="file"] {
   display: block;
