--- a/app/assets/stylesheets/components/big-masthead.scss
+++ b/app/assets/stylesheets/components/big-masthead.scss
@@ -18,7 +18,7 @@
       left: 0;
       box-sizing: border-box;
       height: auto;
-      background: $cu-red;
+      background: $cu-red-rgb-transparent;
       padding: 30px 32px 30px 32px;
       max-width: 100%;
       width: 100%;
