chg solid red bkgd of slider caption to transparent red
thought componentns big_masthead used but phase4_masthead from old
layouts being used. fix both

--- a/app/assets/stylesheets/layout_old/phase4_masthead.scss
+++ b/app/assets/stylesheets/layout_old/phase4_masthead.scss
@@ -334,7 +334,7 @@
     left: 0;
     box-sizing: border-box;
     height: auto;
-    background: #a82439;
+    background: rgba(168,36,57,0.75);
     padding: 30px 32px 30px 32px;
     max-width: 100%;
     width:100%;
