--- a/app/assets/stylesheets/layout_old/phase4_masthead.scss
+++ b/app/assets/stylesheets/layout_old/phase4_masthead.scss
@@ -398,7 +398,8 @@
     width: 100%;
 }
 .bigMasthead .masthead-new.captionOnTop p.subTitle {
-    background: none repeat scroll 0 0 #353430;
+    /*background: none repeat scroll 0 0 #353430;*/
+	background: none repeat scroll 0 0 rgba(56,56,56,0.75);
     box-sizing: border-box;
     /*display: none;*/
     font-size: 12px !important;
@@ -419,7 +420,8 @@
       position: absolute;
       display: none;
       padding: 5px 30px;
-      background: #353430;
+      /*background: #353430;*/
+	  background: rgba(56,56,56,0.75);
       top: -20px;
       left: 0;
       font-size: 12px !important;
