add faculty-directory profile-page css
copy from old level profile_2013.css into new folder. CSS cleaned up to
work with template similiar to Modular. for Profile page only not
listing pages

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -7,6 +7,9 @@
 // Old page layout styles
 @import "layout_old/**/*";
 
+// Faculty Directory listings and profile pages
+@import "faculty-directory/**/*";
+
 // Styles for officially supported modular widgets
 @import "widgets/**/*";
 
