--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -8,7 +8,7 @@
 @import "layout_old/**/*";
 
 // Faculty Directory listings and profile pages
-@import "faculty-directory/**/*";
+@import "faculty-directory/*";
 
 // Styles for officially supported modular widgets
 @import "widgets/**/*";
