made dropdown menu much more like the design

--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -16,13 +16,12 @@
         <input type="hidden" href="http://jameskerr.info"/>
 
         <span class="select-arrow theme-border-color"></span>
-        <select class="theme-border-color">
-          <option>Programs and Majors</option>
-          <option>Film Production</option>
-          <option>Editing</option>
-          <option>Screenwriting</option>
-          <option>Publications & Broadcasting</option>
-        </select>
+
+        <button class="hero-select-button theme-border-color">Sample Text</button>
+        <ul class="hero-select-list">
+          <li><a href="http://www.google.com">Programs and Majors</a></li>
+          <li><a href="http://www.google.com">Film Production</a></li>
+        </ul>
       </nav>
 
       <nav class="calls-to-action">
