--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -34,7 +34,7 @@
       padding: $one-column-widget-spacing/2 0;
       max-width: 100%;
       margin-bottom: 0;
-      background-color: #ECEBE5;
+      background-color: #E5E5E5;
       @include media($medium-screen) {
         padding: $one-column-widget-spacing/2 $one-column-widget-spacing;
       }
@@ -164,13 +164,12 @@
         height: 8px;
         transform: rotateZ(45deg);
       }
-
-      select {
-        position: relative;
-        -webkit-appearance: initial;
-        -moz-appearance: none;
+      
+      .hero-select-button {
+        width: 100%;
         font-size: 16px;
         line-height: 36px;
+        outline: none;
         padding: $base-spacing/2 $base-spacing;
         background-color: transparent;
         box-shadow: none;
@@ -179,6 +178,27 @@
         border-radius: 24px;
         background-position: center right;
         background-repeat: no-repeat;
+      }
+
+      .hero-select-list {
+        display: none;
+        position: absolute;
+        margin: 0;
+        box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
+        width: 100%;
+        background-color: #FFF;
+        top: 0px;
+        z-index: 668;
+
+        li {
+          max-width: 100%;
+          font-size: 16px;
+          line-height: 36px;
+          margin: 0;
+          padding: $base-spacing/2 $base-spacing;
+
+          &:hover, &.selected { background-color: #E5E5E5; }
+        }
       }
     }
   }
