--- a/app/assets/stylesheets/widgets/side_column/simple_form.scss
+++ b/app/assets/stylesheets/widgets/side_column/simple_form.scss
@@ -10,7 +10,16 @@
 
   label {
   	display: inline;
-  	margin-left: 5px;
+  	margin-left: 2px;
+	font-weight: normal;
+  }
+  
+  h2 {
+  	padding: 0 4px;
+  }
+  
+  .editableContent {
+  	padding: 0 4px;
   }
 
   padding: 16px;
