--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -47,7 +47,10 @@
     text-align: right;
     pointer-events: all;
 
-    .cd-marker { background-color: transparent; }
+    .cd-marker {
+      background-color: transparent;
+      color: #E5E5E5;
+    }
 
     a {
       box-shadow: inset 0 2px 0 currentColor;
