--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -9,17 +9,13 @@
       </p>
 
       <nav id="program-select-links" class="program-select">
-        <input type="hidden" href="#"/>
-        <input type="hidden" href="http://jameskerr.info"/>
-        <input type="hidden" href="https://github.com"/>
-        <input type="hidden" href="http://jameskerr.info"/>
-        <input type="hidden" href="http://jameskerr.info"/>
-
         <span class="select-arrow theme-border-color"></span>
 
         <button class="hero-select-button theme-border-color">Sample Text</button>
         <ul class="hero-select-list">
-          <li><a href="http://www.google.com">Programs and Majors</a></li>
+          <li>
+            <a href="http://www.google.com">Programs and Majors</a>
+          </li>
           <li><a href="http://www.google.com">Film Production</a></li>
         </ul>
       </nav>
@@ -37,14 +33,14 @@
         <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
           <article class="theme-bg-color-alpha">
             <img src="http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg">
-            <div class="content">
+<!--             <div class="content">
               <span class="category">Beyond Dodge</span>
               <h2 class="title">New Orleans Becoming Hollywood South</h2>
               <h3 class="subtitle">Alumni Discuss the film industry in New Orleans</h3>
               <p class="body">
                 What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...&nbsp;&nbsp;<a href="#">Read more on dodge</a>
               </p>
-            </div>
+            </div> -->
           </article>
         </div>
       </li>
@@ -55,14 +51,14 @@
             <video autoplay loop poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
               <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
             </video>
-            <div class="content">
+<!--             <div class="content">
               <span class="category">Sports Broadcasting</span>
               <h2 class="title">Students Cover Chapman's Homecoming Football Game</h2>
               <h3 class="subtitle">Equitment and crew all from Chapman's own Dodge College</h3>
               <p class="body">
                 What’s the first thing that comes to mind when you think of France and the arts? The Louvre? The Mona Lisa? Hiroshima, Mon Amour? It’s probably not animation. Yet the influence of French animation is also enormous, from the first animated film in history, Reynaud’s Pauvre Pierrot to Illumination Studios’ newest blockbuster, Minions. Dodge’s Digital...&nbsp;&nbsp;<a href="#">Read more on dodge</a>
               </p>
-            </div>
+            </div> -->
           </article>
           <video id="background-video" class="background-video" autoplay loop poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
             <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/homecoming.mp4" type="video/mp4">
