removed opacity from background-color

--- a/app/assets/stylesheets/widgets/single_column/call_to_action_block.scss
+++ b/app/assets/stylesheets/widgets/single_column/call_to_action_block.scss
@@ -31,7 +31,6 @@ $call-to-action-block-screen-height: 150px;
       content: '';
       position: absolute;
       top: 0; left: 0; bottom: 0; right: 0;
-      background-color: rgba(255,255,255,0.5);
     }
 
     &:hover {
@@ -95,5 +94,9 @@ $call-to-action-block-screen-height: 150px;
       top: 0; left: 0; bottom: 0; right: 0;
       background-color: rgba(0,0,0,0.5);
     }
+  }
+
+  .theme-bg-color {
+    color: white;
   }
 }
