--- a/app/views/widgets/single_column/_call_to_action_block.html
+++ b/app/views/widgets/single_column/_call_to_action_block.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
         </a>
-        <a href="#" class="box" style="">
+        <a href="#" class="box theme-bg-color" style="">
             <div class="content-container">
                 <div class="content">
                     <h3 class="title">Academics</h3>
