--- a/app/assets/stylesheets/widgets/single_column/cta_footer.scss
+++ b/app/assets/stylesheets/widgets/single_column/cta_footer.scss
@@ -37,33 +37,15 @@
 			text-align: center;
 
 			.footer-button {
-				display: inline-block;
 				width: 80%;
-				padding: 12px 8px;
-				border: none;
-				border-radius: 3px;
-				box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 1);
-				color: #ffffff;
-				font-size: 14px;
-				cursor: pointer;
-				-webkit-transition: background-color 150ms;
-				transition: background-color 150ms;
 			}
 
 			&.gray .footer-button {
-				background-color: $gray-smoke;
-
-				&:hover {
-					background-color: #a4a3a0;
-				}
+				@include button($gray-smoke);			
 			}
 
 			&.red .footer-button {
-				background-color: $red;
-
-				&:hover {
-					background-color: #bd2940;
-				}
+				@include button($red);
 			}
 		}
 	}
