--- a/app/views/widgets/single_column/_call_to_action_block.html
+++ b/app/views/widgets/single_column/_call_to_action_block.html
@@ -1,6 +1,6 @@
 <div class="call-to-action-block-widget">
     <div class="outer-container">
-        <a href="#" class="box box__text-light" style="background-image: url(https://www.colourbox.com/preview/3280081-blurry-pattern-of-colorful-decoration-stars.jpg)">
+        <a href="#" class="box box__text-light box__background-media" style="background-image: url(https://www.colourbox.com/preview/3280081-blurry-pattern-of-colorful-decoration-stars.jpg)">
             <div class="content-container">
                 <div class="content">
                     <h3 class="title">Give</h3>
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </a>
-        <a href="#" class="box box__text-light" style="background-image: url('http://www.heartspoken.com/wp-content/uploads/2011/09/ByeByeSun_600.jpg')">
+        <a href="#" class="box box__text-light box__background-media" style="background-image: url('http://www.heartspoken.com/wp-content/uploads/2011/09/ByeByeSun_600.jpg')">
             <div class="content-container">
                 <div class="content">
                     <h3 class="title">Laugh with Kids</h3>
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </a>
-        <a href="#" class="box box__text-light" style="background-image: url(https://www.colourbox.com/preview/3280081-blurry-pattern-of-colorful-decoration-stars.jpg)">
+        <a href="#" class="box box__text-light box__background-media" style="background-image: url(https://www.colourbox.com/preview/3280081-blurry-pattern-of-colorful-decoration-stars.jpg)">
             <div class="content-container">
                 <div class="content">
                     <h3 class="title">Upcoming Events</h3>
