--- a/app/views/widgets/single_column/_cta_footer.html
+++ b/app/views/widgets/single_column/_cta_footer.html
@@ -3,14 +3,14 @@
 		<div class="footer-section text">
 			<p>Next Steps</p>
 		</div>
-		<div class="footer-section link gray">
-			<a class="footer-button" href="../../admission/undergraduate/applynow.aspx">Visit our Campus</a>
+		<div class="footer-section link">
+			<a class="footer-button gray" href="../../admission/undergraduate/applynow.aspx">Visit our Campus</a>
 		</div>
-		<div class="footer-section link gray">
-			<a class="footer-button" href="../../admission/undergraduate/applynow.aspx">Alumni Success</a>
+		<div class="footer-section link">
+			<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Alumni Success</a>
 		</div>
-		<div class="footer-section link red">
-			<a class="footer-button" href="../../admission/undergraduate/applynow.aspx">Apply Now</a>
+		<div class="footer-section link">
+			<a class="footer-button red" href="../../admission/undergraduate/applynow.aspx">Apply Now</a>
 		</div>
 	</div>
 </div>
