--- a/app/views/widgets/single_column/_contact_footer.html
+++ b/app/views/widgets/single_column/_contact_footer.html
@@ -21,6 +21,7 @@
 				<li><a class="social-link instagram" href="http://www.instagram.com/chapmanu"style="background-image: url(<%= image_url 'instagram.svg' %>);"></a></li>
 				<li><a class="social-link facebook" href="http://www.facebook.com/ChapmanUniversity" style="background-image: url(<%= image_url 'facebook.svg' %>);"></a></li>
 				<li><a class="social-link twitter" href="http://twitter.com/#!/chapmanu" style="background-image: url(<%= image_url 'twitter.svg' %>);"></a></li>
+				<li><a class="social-link blogs" href="http://twitter.com/#!/chapmanu" style="background-image: url(<%= image_url 'blogs.svg' %>);"></a></li>
 			</ul>
 		</div>
 	</div>
