--- a/app/views/widgets/single_column/_cta_footer.html
+++ b/app/views/widgets/single_column/_cta_footer.html
@@ -3,14 +3,18 @@
 		<div class="footer-section text">
 			<p>Next Steps</p>
 		</div>
-		<div class="footer-section link">
-			<a class="footer-button gray" href="../../admission/undergraduate/applynow.aspx">Visit our Campus</a>
-		</div>
-		<div class="footer-section link">
-			<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Alumni Success</a>
-		</div>
-		<div class="footer-section link">
-			<a class="footer-button red" href="../../admission/undergraduate/applynow.aspx">Apply Now</a>
+		<div class="footer-section buttons">
+			<div class="buttons-container">
+				<div class="button-wrapper">
+					<a class="footer-button gray" href="../../admission/undergraduate/applynow.aspx">Visit our Campus</a>
+				</div>
+				<div class="button-wrapper">
+					<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Alumni Success</a>
+				</div>
+				<div class="button-wrapper">
+					<a class="footer-button red" href="../../admission/undergraduate/applynow.aspx">Apply Now</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
