--- a/app/views/widgets/single_column/_messaging_1_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_1_column_facts.html
@@ -1,4 +1,4 @@
-<div class="messaging-widget messaging-widget__1-column">
+<div class="messaging-widget messaging-widget__1-column messaging-widget__has-fact-cards">
   <div class="outer-container">
     <div class="text-column">
       <div class="section-message">
@@ -9,7 +9,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
           </p>
         </div>
-        <div class="actions"><a class="theme-button">This is a button</a></div>
+
       </div>
     </div>
     <div class="media-column">
@@ -76,5 +76,6 @@
         </div>
       </div>
     </div>
+    <div class="actions"><a class="theme-button">This is a button</a></div>
   </div>
 </div>
