Make panel area buttons consistent with rest of page

--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -21,8 +21,8 @@
       </nav>
 
       <nav class="calls-to-action">
-        <a href="#" class="theme-bg-color">Visit Dodge</a>
-        <a href="#" class="theme-bg-color">Admission Information</a>
+        <a href="#" class="theme-bg-color theme-button">Visit Dodge</a>
+        <a href="#" class="theme-bg-color theme-button">Admission Information</a>
       </nav>
     </section>
   </div>
