--- a/app/assets/stylesheets/layout_old/faculty/profile-page.scss
+++ b/app/assets/stylesheets/layout_old/faculty/profile-page.scss
@@ -3,6 +3,10 @@
 .facultyProfile  {
 	font-size: 14px;
 }
+.facultyProfile h2 {
+	font-size: 14px;
+}
+
 .facultyProfile .profilePicture {
     margin:10px 10px 10px 0;
     overflow:hidden;
@@ -69,7 +73,7 @@
     font-weight:bold;
     float:left;
     clear:left;
-    margin:0 5px 0 0;
+    margin:0 5px 5px 0;
 }
 
 .facultyProfile dd{
