--- a/app/assets/stylesheets/widgets/single_column/call_to_action_block.scss
+++ b/app/assets/stylesheets/widgets/single_column/call_to_action_block.scss
@@ -103,10 +103,10 @@ $call-to-action-block-screen-height: 150px;
 }
 
 .call-to-action-block-widget__medium-bg {
-  background-color: #cfcfcf;
+  background-color: $bg-silver-gray;
 }
 
 .call-to-action-block-widget__dark-bg {
-  background-color: #323430;
+  background-color: $black;
 }
 
