--- a/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
+++ b/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
@@ -391,7 +391,7 @@ $tile_width: 335px;
 }
 
 .chapman-social-feed-widget__dark-bg {
-	background-color: #323430;
+	background-color: $black;
 	color: white;
 }
 
