--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -206,7 +206,7 @@
 
 /* Dark bg Variation */
 .messaging-widget__dark-bg {
-	background-color: $color-dark-gray;
+	background-color: $black;
 	.title, .category, .body { color: white; }
 }
 
