--- a/app/views/widgets/single_column/_chapman_events_feed.html
+++ b/app/views/widgets/single_column/_chapman_events_feed.html
@@ -1,4 +1,4 @@
-<div class="chapman-events-feed-widget">
+<div class="chapman-events-feed-widget chapman-events-feed-widget__dark-bg">
   <div class="outer-container">
 
     <div data-chapman-events-feed="http://events.chapman.edu/">
