--- a/app/views/widgets/single_column/_subscribe.html
+++ b/app/views/widgets/single_column/_subscribe.html
@@ -1,4 +1,4 @@
-<div class="subscribe-widget">
+<div class="subscribe-widget subscribe-widget__dark-bg">
   <div class="outer-container">
     <div class="subscribe-message-column">
       <p>Sign up to receive updates from Dodge College</p>
