added dark and medium bg-color classes for cta-3-up widget. removed white bg option

--- a/app/assets/stylesheets/widgets/single_column/call_to_action_3_up.scss
+++ b/app/assets/stylesheets/widgets/single_column/call_to_action_3_up.scss
@@ -75,3 +75,12 @@
 		}
 	}
 }
+
+.call-to-action-3-up-widget__medium-bg {
+  background-color: $bg-silver-gray;
+}
+
+.call-to-action-3-up-widget__dark-bg {
+  background-color: $black;
+  color: white;
+}
