--- a/app/views/widgets/single_column/_cta_footer.html
+++ b/app/views/widgets/single_column/_cta_footer.html
@@ -1,4 +1,4 @@
-<div class="cta-footer-widget">
+<div class="cta-footer-widget cta-footer-widget__medium-bg">
 	<div class="outer-container">
 		<div class="footer-section text">
 			<p>Next Steps</p>
